[gd_scene format=3 uid="uid://d2kve7fity7du"]

[ext_resource type="Script" uid="uid://ttjtcq78bqkx" path="res://script/ui/win_menu.gd" id="1_2hvk1"]
[ext_resource type="Theme" uid="uid://be30gaya8c5ly" path="res://assets/hud/Theme.tres" id="1_8ch8s"]
[ext_resource type="Texture2D" uid="uid://vmug3ssx0wcb" path="res://assets/hud/UI_Credits.png" id="2_8ch8s"]
[ext_resource type="Texture2D" uid="uid://biicvll1v04ba" path="res://assets/hud/Sans_titre_429_20260224150002.png" id="3_53mlp"]

[node name="WinMenu" type="Control" unique_id=1867493800]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_8ch8s")
script = ExtResource("1_2hvk1")

[node name="Panel" type="PanelContainer" parent="." unique_id=734825757]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -358.0
offset_top = -53.5
offset_right = 358.0
offset_bottom = 53.5
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Panel" unique_id=1328047049]
layout_mode = 2
texture = ExtResource("3_53mlp")
stretch_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel" unique_id=2124631785]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 200

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer" unique_id=1487550012]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer" unique_id=1124315312]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Congratulations You Win!!"

[node name="HBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer" unique_id=1572939881]
layout_mode = 2
alignment = 1

[node name="play_again" type="TextureButton" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer" unique_id=1209566276]
layout_mode = 2
texture_normal = ExtResource("2_8ch8s")
stretch_mode = 3

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/play_again" unique_id=1123807628]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.0
offset_top = -16.0
offset_right = 88.0
offset_bottom = 53.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.016314477
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40
text = "Play Again"
horizontal_alignment = 1

[node name="main_menu" type="TextureButton" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer" unique_id=415755882]
layout_mode = 2
texture_normal = ExtResource("2_8ch8s")
stretch_mode = 3

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/main_menu" unique_id=71586627]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.0
offset_top = -13.999996
offset_right = 95.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.016314477
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40
text = "Main Menu"
horizontal_alignment = 1

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/play_again" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/main_menu" to="." method="_on_main_menu_pressed"]
